--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "express-fileupload": "^1.2.1",
     "express-handlebars": "^6.0.2",
     "mongoose": "^6.1.3",
     "path": "^0.12.7"
